--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 3.25.0)
 project(Anterle_deps)
 
-set_property(GLOBAL PROPERTY GLFW_BUILD_EXAMPLES OFF)
-set_property(GLOBAL PROPERTY GLFW_BUILD_TESTS OFF)
-set_property(GLOBAL PROPERTY GLFW_BUILD_DOCS OFF)
-set_property(GLOBAL PROPERTY GLFW_INSTALL OFF)
-set_property(GLOBAL PROPERTY GLFW_BUILD_WAYLAND ON)
-set_property(GLOBAL PROPERTY GLFW_USE_HYBRID_HPG ON)
+set(GLFW_BUILD_EXAMPLES OFF)
+set(GLFW_BUILD_TESTS OFF)
+set(GLFW_BUILD_DOCS OFF)
+set(GLFW_INSTALL OFF)
+set(GLFW_BUILD_WAYLAND ON)
+set(GLFW_USE_HYBRID_HPG ON)
 
 add_subdirectory("glad")
 add_subdirectory("glfw")
