--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -5,7 +5,7 @@ set(GLFW_BUILD_EXAMPLES OFF)
 set(GLFW_BUILD_TESTS OFF)
 set(GLFW_BUILD_DOCS OFF)
 set(GLFW_INSTALL OFF)
-set(GLFW_BUILD_WAYLAND ON)
+# set(GLFW_BUILD_WAYLAND ON)
 set(GLFW_USE_HYBRID_HPG ON)
 
 add_subdirectory("glad")
