update file structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,34 +15,6 @@ if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang" OR CMAKE_COMPILER_IS_GNUCXX)
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
 endif()
 
-file(GLOB anterle_includes "include/*.hpp")
-file(GLOB anterle_includes_folder "include/*/*.hpp")
-file(GLOB anterle_src "src/*.cpp")
-file(GLOB anterle_src_folder "src/*/*.cpp")
-
-add_executable(Anterle ${anterle_includes} ${anterle_src} ${anterle_includes_folder} ${anterle_src_folder})
-target_include_directories(Anterle PUBLIC include/)
-
 add_subdirectory("deps")
-
-find_package(Freetype REQUIRED)
-
-target_link_libraries(Anterle PRIVATE 
-    glfw
-    glad
-    imgui
-    glm
-    alpaca
-    spdlog
-    Freetype::Freetype
-)
-
-target_include_directories(Anterle PRIVATE
-    Freetype::Freetype
-)
-
-add_custom_command(
-        TARGET Anterle POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy_directory
-                ${CMAKE_SOURCE_DIR}/resources
-                ${CMAKE_CURRENT_BINARY_DIR}/resources)
+add_subdirectory("engine")
+add_subdirectory("game")
