--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -14,4 +14,4 @@ add_subdirectory("imgui")
 add_subdirectory("miniaudio")
 add_subdirectory("glm")
 add_subdirectory("alpaca")
-add_subdirectory("spdlog")
+add_subdirectory("plog")
