add Game.cpp as part of engine

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,13 @@ project(Anterle
         LANGUAGES CXX
 )
 
+if(PROJECT_SOURCE_DIR STREQUAL PROJECT_BINARY_DIR)
+  message(
+    FATAL_ERROR
+      "In-source builds not allowed. Please make a new directory (called a build directory) and run CMake from there."
+  )
+endif()
+
 include("cmake/Cache.cmake")
 include("cmake/CompilerWarnings.cmake")
 include("cmake/StaticAnalyzers.cmake")
@@ -11,7 +18,6 @@ include("cmake/InterproceduralOptimization.cmake")
 
 option(ANTERLE_ENABLE_IPO "Enable IPO/LTO" OFF)
 option(ANTERLE_ENABLE_CACHE "Enable ccache" OFF)
-option(ANTERLE_ENABLE_CLANG_TIDY "Enable clang-tidy" OFF)
 option(ANTERLE_WARNINGS_AS_ERRORS "Treat Warnings As Errors" OFF)
 option(ANTERLE_ENABLE_SANITIZER_ADDRESS "Enable address sanitizer" OFF)
 option(ANTERLE_ENABLE_SANITIZER_LEAK "Enable leak sanitizer" OFF)
@@ -34,21 +40,20 @@ if(ANTERLE_ENABLE_CACHE)
     enable_cache()
 endif()
 
-add_subdirectory("dmsl")
 add_subdirectory("deps")
 add_subdirectory("engine")
+add_subdirectory("tool")
 add_subdirectory("game")
-
-if(ANTERLE_ENABLE_CLANG_TIDY)
-    enable_clang_tidy(AnterleEngine ${ANTERLE_WARNINGS_AS_ERRORS})
-endif()
-
-if(ANTERLE_ENABLE_CLANG_TIDY)
-    enable_clang_tidy(AnterleGame ${ANTERLE_WARNINGS_AS_ERRORS})
-endif()
 
 set_project_warnings(
     AnterleEngine
+    ${ANTERLE_WARNINGS_AS_ERRORS}
+    ""
+    ""
+    ""
+)
+set_project_warnings(
+    AnterleTool
     ${ANTERLE_WARNINGS_AS_ERRORS}
     ""
     ""
@@ -64,6 +69,14 @@ set_project_warnings(
 
 enable_sanitizers(
     AnterleEngine
+    ${ANTERLE_ENABLE_SANITIZER_ADDRESS}
+    ${ANTERLE_ENABLE_SANITIZER_LEAK}
+    ${ANTERLE_ENABLE_SANITIZER_UNDEFINED}
+    ${ANTERLE_ENABLE_SANITIZER_THREAD}
+    ${ANTERLE_ENABLE_SANITIZER_MEMORY}
+)
+enable_sanitizers(
+    AnterleTool
     ${ANTERLE_ENABLE_SANITIZER_ADDRESS}
     ${ANTERLE_ENABLE_SANITIZER_LEAK}
     ${ANTERLE_ENABLE_SANITIZER_UNDEFINED}
