--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 3.25.0)
+
 project(AnterleEngine
         VERSION 1.0.3
         LANGUAGES CXX
@@ -7,21 +8,81 @@ project(AnterleEngine
 file(GLOB_RECURSE engine_headers CONFIGURE_DEPENDS "./include/*.hpp")
 file(GLOB_RECURSE engine_sources CONFIGURE_DEPENDS "./src/*.cpp")
 
-add_library(AnterleEngine ${engine_headers} ${engine_sources})
+add_library(AnterleEngine STATIC ${engine_headers} ${engine_sources})
 target_include_directories(AnterleEngine PUBLIC include/)
 
-find_package(Freetype REQUIRED)
+include(FetchContent)
+
+FetchContent_Declare(
+    stb
+    GIT_REPOSITORY https://github.com/nothings/stb.git
+    GIT_TAG 5736b15f7ea0ffb08dd38af21067c314d6a3aae9
+)
+FetchContent_Declare(
+    glm
+    GIT_REPOSITORY https://github.com/g-truc/glm.git
+    GIT_TAG 0.9.9.8
+)
+FetchContent_Declare(
+    glfw
+    GIT_REPOSITORY https://github.com/glfw/glfw.git
+    GIT_TAG 3.3.8
+)
+FetchContent_Declare(
+    harfbuzz
+    GIT_REPOSITORY https://github.com/harfbuzz/harfbuzz.git
+    GIT_TAG 8.0.0
+)
+FetchContent_Declare(
+    freetype
+    GIT_REPOSITORY https://github.com/freetype/freetype.git
+    GIT_TAG VER-2-13-0
+)
+FetchContent_Declare(
+    alpaca
+    GIT_REPOSITORY https://github.com/p-ranav/alpaca.git
+    GIT_TAG v0.2.1
+)
+FetchContent_Declare(
+    plog
+    GIT_REPOSITORY https://github.com/SergiusTheBest/plog.git
+    GIT_TAG 1.1.9
+)
+
+set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
+set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)
+set(GLFW_USE_HYBRID_HPG ON CACHE BOOL "" FORCE)
+# set(GLFW_BUILD_WAYLAND ON CACHE BOOL "" FORCE)
+
+set(HB_BUILD_SUBSET OFF CACHE BOOL "" FORCE)
+
+set(FT_DISABLE_BROTLI ON CACHE BOOL "" FORCE)
+set(FT_DISABLE_BZIP2 ON CACHE BOOL "" FORCE)
+set(FT_DISABLE_PNG ON CACHE BOOL "" FORCE)
+set(FT_DISABLE_ZLIB ON CACHE BOOL "" FORCE)
+
+FetchContent_MakeAvailable(stb)
+FetchContent_MakeAvailable(glm)
+FetchContent_MakeAvailable(glfw)
+FetchContent_MakeAvailable(harfbuzz)
+FetchContent_MakeAvailable(freetype)
+FetchContent_MakeAvailable(alpaca)
+FetchContent_MakeAvailable(plog)
 
 target_link_libraries(AnterleEngine PUBLIC 
-    glfw
     glad
-    imgui
     glm
+    glfw
+    imgui
     alpaca
     plog
-    Freetype::Freetype
+    harfbuzz
+    freetype
 )
 
 target_include_directories(AnterleEngine PUBLIC 
-    Freetype::Freetype
+    ${stb_SOURCE_DIR}
+    ${freetype_SOURCE_DIR}/include
 )
