--- a/deps/miniaudio/CMakeLists.txt
+++ b/deps/miniaudio/CMakeLists.txt
@@ -4,6 +4,6 @@ project(Miniaudio LANGUAGES C)
 file(GLOB miniaudio_includes "include/*.h")
 file(GLOB miniaudio_src "src/*.c")
 
-add_library(miniaudio SHARED ${miniaudio_src} ${miniaudio_includes})
+add_library(miniaudio ${miniaudio_src} ${miniaudio_includes})
 
 target_include_directories(miniaudio PUBLIC include/)
