--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ include("cmake/InterproceduralOptimization.cmake")
 option(ANTERLE_ENABLE_IPO "Enable IPO/LTO" OFF)
 option(ANTERLE_ENABLE_CACHE "Enable ccache" OFF)
 option(ANTERLE_WARNINGS_AS_ERRORS "Treat Warnings As Errors" OFF)
-option(ANTERLE_ENABLE_SANITIZER_ADDRESS "Enable address sanitizer" ON)
+option(ANTERLE_ENABLE_SANITIZER_ADDRESS "Enable address sanitizer" OFF)
 option(ANTERLE_ENABLE_SANITIZER_LEAK "Enable leak sanitizer" OFF)
 option(ANTERLE_ENABLE_SANITIZER_UNDEFINED "Enable undefined sanitizer" OFF)
 option(ANTERLE_ENABLE_SANITIZER_THREAD "Enable thread sanitizer" OFF)
