add notifiaction system

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -8,7 +8,7 @@ project(AnterleEngine
 file(GLOB_RECURSE engine_headers CONFIGURE_DEPENDS "./include/*.hpp")
 file(GLOB_RECURSE engine_sources CONFIGURE_DEPENDS "./src/*.cpp")
 
-add_library(AnterleEngine ${engine_headers} ${engine_sources} )
+add_library(AnterleEngine ${engine_headers} ${engine_sources}  "src/object/ui/notify.cpp")
 target_include_directories(AnterleEngine PUBLIC include/)
 
 include(FetchContent)
