--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -36,19 +36,14 @@ FetchContent_Declare(
     GIT_TAG 0.9.9.8
 )
 FetchContent_Declare(
-    freetype
-    GIT_REPOSITORY https://github.com/freetype/freetype.git
-    GIT_TAG VER-2-13-2
+    tinyobjloader
+    GIT_REPOSITORY https://github.com/tinyobjloader/tinyobjloader.git
+    GIT_TAG release
 )
 FetchContent_Declare(
     loguru
 	GIT_REPOSITORY https://github.com/emilk/loguru.git
 	GIT_TAG master
-)
-FetchContent_Declare(
-    DMAssetManager
-    GIT_REPOSITORY https://github.com/DublikuntMux/DMAssetManager.git
-    GIT_TAG main
 )
 
 set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
@@ -58,33 +53,23 @@ set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)
 set(GLFW_USE_HYBRID_HPG ON CACHE BOOL "" FORCE)
 set(GLFW_BUILD_WAYLAND ON CACHE BOOL "" FORCE)
 
-set(FT_DISABLE_BROTLI ON CACHE BOOL "" FORCE)
-set(FT_DISABLE_BZIP2 ON CACHE BOOL "" FORCE)
-set(FT_DISABLE_PNG ON CACHE BOOL "" FORCE)
-set(FT_DISABLE_ZLIB ON CACHE BOOL "" FORCE)
-set(FT_DISABLE_HARFBUZZ ON CACHE BOOL "" FORCE)
-
 set(LOGURU_WITH_STREAMS ON CACHE BOOL "" FORCE)
-set(DMASSET_ENABLE_DECODER OFF CACHE BOOL "" FORCE)
 
 FetchContent_MakeAvailable(stb)
 FetchContent_MakeAvailable(glm)
 FetchContent_MakeAvailable(glfw)
 FetchContent_MakeAvailable(uuid_v4)
-FetchContent_MakeAvailable(freetype)
 FetchContent_MakeAvailable(loguru)
-FetchContent_MakeAvailable(DMAssetManager)
+FetchContent_MakeAvailable(tinyobjloader)
 
 target_link_libraries(AnterleEngine PUBLIC 
     Vulkan::Vulkan
     uuid_v4::uuid_v4
     glm::glm
     glfw
-    imgui
-    freetype
     miniaudio
     loguru::loguru
-    DMAssetManager
+    tinyobjloader
 )
 
 target_include_directories(AnterleEngine PUBLIC 
