update deps + remove unused code

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -6,10 +6,9 @@ project(AnterleEngine
         LANGUAGES CXX
 )
 
-file(GLOB_RECURSE engine_headers CONFIGURE_DEPENDS "./include/*.hpp")
 file(GLOB_RECURSE engine_sources CONFIGURE_DEPENDS "./src/*.cpp")
 
-add_library(AnterleEngine ${engine_headers} ${engine_sources})
+add_library(AnterleEngine ${engine_sources})
 target_include_directories(AnterleEngine PUBLIC include/)
 
 set_target_properties(AnterleEngine PROPERTIES VERSION ${PROJECT_VERSION})
@@ -25,12 +24,12 @@ FetchContent_Declare(
 FetchContent_Declare(
     glm
     GIT_REPOSITORY https://github.com/g-truc/glm.git
-    GIT_TAG 0.9.9.8
+    GIT_TAG master
 )
 FetchContent_Declare(
     glfw
     GIT_REPOSITORY https://github.com/glfw/glfw.git
-    GIT_TAG 3.3.8
+    GIT_TAG 3.4
 )
 FetchContent_Declare(
     freetype
@@ -43,18 +42,12 @@ FetchContent_Declare(
 	GIT_TAG master
 )
 
-FetchContent_Declare(
-    DMAssetManager
-    GIT_REPOSITORY https://github.com/DublikuntMux/DMAssetManager.git
-    GIT_TAG main
-)
-
 set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
 set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)
-# set(GLFW_USE_HYBRID_HPG ON CACHE BOOL "" FORCE)
-# set(GLFW_BUILD_WAYLAND ON CACHE BOOL "" FORCE)
+set(GLFW_USE_HYBRID_HPG ON CACHE BOOL "" FORCE)
+set(GLFW_BUILD_WAYLAND ON CACHE BOOL "" FORCE)
 
 set(FT_DISABLE_BROTLI ON CACHE BOOL "" FORCE)
 set(FT_DISABLE_BZIP2 ON CACHE BOOL "" FORCE)
@@ -63,14 +56,12 @@ set(FT_DISABLE_ZLIB ON CACHE BOOL "" FORCE)
 set(FT_DISABLE_HARFBUZZ ON CACHE BOOL "" FORCE)
 
 set(LOGURU_WITH_STREAMS ON CACHE BOOL "" FORCE)
-set(DMASSET_ENABLE_DECODER OFF CACHE BOOL "" FORCE)
 
 FetchContent_MakeAvailable(stb)
 FetchContent_MakeAvailable(glm)
 FetchContent_MakeAvailable(glfw)
 FetchContent_MakeAvailable(freetype)
 FetchContent_MakeAvailable(loguru)
-FetchContent_MakeAvailable(DMAssetManager)
 
 target_link_libraries(AnterleEngine PUBLIC 
     glad
@@ -80,7 +71,6 @@ target_link_libraries(AnterleEngine PUBLIC
     freetype
     miniaudio
     loguru::loguru
-    DMAssetManager
 )
 
 target_include_directories(AnterleEngine PUBLIC 
