--- a/deps/miniaudio/CMakeLists.txt
+++ b/deps/miniaudio/CMakeLists.txt
@@ -1,9 +1,8 @@
 cmake_minimum_required(VERSION 3.25.0)
 project(Miniaudio LANGUAGES C)
 
-file(GLOB miniaudio_includes "include/*.h")
 file(GLOB miniaudio_src "src/*.c")
 
-add_library(miniaudio ${miniaudio_src} ${miniaudio_includes})
+add_library(miniaudio ${miniaudio_src})
 
 target_include_directories(miniaudio PUBLIC include/)
