--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.25.0)
-project(Anterle
-        VERSION 1.0.1
-        LANGUAGES CXX
-)
+project(
+  Anterle
+  VERSION 1.0.1
+  LANGUAGES CXX)
 
 if(PROJECT_SOURCE_DIR STREQUAL PROJECT_BINARY_DIR)
   message(
@@ -16,7 +16,7 @@ include(FetchContent)
 include("cmake/Cache.cmake")
 include("cmake/CompilerWarnings.cmake")
 include("cmake/StaticAnalyzers.cmake")
-include("cmake/InterproceduralOptimization.cmake") 
+include("cmake/InterproceduralOptimization.cmake")
 
 option(ANTERLE_ENABLE_IPO "Enable IPO/LTO" OFF)
 option(ANTERLE_ENABLE_CACHE "Enable ccache" OFF)
@@ -27,19 +27,19 @@ option(ANTERLE_ENABLE_SANITIZER_UNDEFINED "Enable undefined sanitizer" OFF)
 option(ANTERLE_ENABLE_SANITIZER_THREAD "Enable thread sanitizer" OFF)
 option(ANTERLE_ENABLE_SANITIZER_MEMORY "Enable memory sanitizer" OFF)
 
-if (NOT DEFINED CMAKE_CXX_STANDARD)
-  set(CMAKE_CXX_STANDARD 20)
-endif()
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_VISIBILITY_PRESET hidden)
 
 if(ANTERLE_ENABLE_IPO)
-    enable_ipo()
+  enable_ipo()
 endif()
 
 if(ANTERLE_ENABLE_CACHE)
-    enable_cache()
+  enable_cache()
 endif()
 
 add_subdirectory("deps")
@@ -47,49 +47,19 @@ add_subdirectory("engine")
 add_subdirectory("tool")
 add_subdirectory("game")
 
-set_project_warnings(
-    AnterleEngine
-    ${ANTERLE_WARNINGS_AS_ERRORS}
-    ""
-    ""
-    ""
-)
-set_project_warnings(
-    AnterleTool
-    ${ANTERLE_WARNINGS_AS_ERRORS}
-    ""
-    ""
-    ""
-)
-set_project_warnings(
-    AnterleGame
-    ${ANTERLE_WARNINGS_AS_ERRORS}
-    ""
-    ""
-    ""
-)
+set_project_warnings(AnterleEngine ${ANTERLE_WARNINGS_AS_ERRORS} "" "" "")
+set_project_warnings(AnterleTool ${ANTERLE_WARNINGS_AS_ERRORS} "" "" "")
+set_project_warnings(AnterleGame ${ANTERLE_WARNINGS_AS_ERRORS} "" "" "")
 
 enable_sanitizers(
-    AnterleEngine
-    ${ANTERLE_ENABLE_SANITIZER_ADDRESS}
-    ${ANTERLE_ENABLE_SANITIZER_LEAK}
-    ${ANTERLE_ENABLE_SANITIZER_UNDEFINED}
-    ${ANTERLE_ENABLE_SANITIZER_THREAD}
-    ${ANTERLE_ENABLE_SANITIZER_MEMORY}
-)
+  AnterleEngine ${ANTERLE_ENABLE_SANITIZER_ADDRESS}
+  ${ANTERLE_ENABLE_SANITIZER_LEAK} ${ANTERLE_ENABLE_SANITIZER_UNDEFINED}
+  ${ANTERLE_ENABLE_SANITIZER_THREAD} ${ANTERLE_ENABLE_SANITIZER_MEMORY})
 enable_sanitizers(
-    AnterleTool
-    ${ANTERLE_ENABLE_SANITIZER_ADDRESS}
-    ${ANTERLE_ENABLE_SANITIZER_LEAK}
-    ${ANTERLE_ENABLE_SANITIZER_UNDEFINED}
-    ${ANTERLE_ENABLE_SANITIZER_THREAD}
-    ${ANTERLE_ENABLE_SANITIZER_MEMORY}
-)
+  AnterleTool ${ANTERLE_ENABLE_SANITIZER_ADDRESS}
+  ${ANTERLE_ENABLE_SANITIZER_LEAK} ${ANTERLE_ENABLE_SANITIZER_UNDEFINED}
+  ${ANTERLE_ENABLE_SANITIZER_THREAD} ${ANTERLE_ENABLE_SANITIZER_MEMORY})
 enable_sanitizers(
-    AnterleGame
-    ${ANTERLE_ENABLE_SANITIZER_ADDRESS}
-    ${ANTERLE_ENABLE_SANITIZER_LEAK}
-    ${ANTERLE_ENABLE_SANITIZER_UNDEFINED}
-    ${ANTERLE_ENABLE_SANITIZER_THREAD}
-    ${ANTERLE_ENABLE_SANITIZER_MEMORY}
-)
+  AnterleGame ${ANTERLE_ENABLE_SANITIZER_ADDRESS}
+  ${ANTERLE_ENABLE_SANITIZER_LEAK} ${ANTERLE_ENABLE_SANITIZER_UNDEFINED}
+  ${ANTERLE_ENABLE_SANITIZER_THREAD} ${ANTERLE_ENABLE_SANITIZER_MEMORY})
